# serialization-protocols-benchmark

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
go/: go.mod  go.sum  main.go
python/: _gen_fb_init.py  benchmark.py  plot.py
schemas/: benchmark.fbs  benchmark.proto
