[project]
name = "serialization-benchmark"
version = "0.1.0"
description = "Serialization protocols benchmark"
requires-python = ">=3.10"
dependencies = [
    "protobuf>=5.0",
    "msgpack>=1.1",
    "matplotlib>=3.8",
    "flatbuffers>=25.12.19",
]

[project.optional-dependencies]
dev = [
    "flatbuffers>=24.0",
]
